@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession {
    - ApplicationSession()
    + {static} getInstance()
    + getCurrentSession()
}

class UserSession {
    + getUsername()
}

class Editor {
    - username : String
    - password : String
    + addScenario(scenario)
    + addMap(map)
}

class Scenario {
    - nameID : String
    - startDate : Date
    - endDate : Date
    - tweakedCityList : List<City>
    - availableIndustryList : List<Industry>
    - availableLocomotives : List<Locomotive>
    
    + Scenario(nameID, editor, startDate, endDate,\n    selectedIndustries, availableLocomotives, mapCityList)
    + configurePort(port, portImports,\n    portExports, portProduces)
    + configureGeneratingIndustry(industry,\n    genIndustryFactors)
    + configureCity(city, cityTrafficRates)
}

class Map {
    - nameID : String
    - cityList : List<City>
    - industryList : List<Industry>
    
    + getIndustries()
    + getCities()
    + createScenario(nameID, editor, startDate, endDate,\n    selectedIndustries, portImports, portExports,\n    portProduces, genIndustryFactors,\n    availableLocomotives, mapCityList, cityTrafficRates)
    + addScenario(scenario)
    - validateScenario()
}

class Industry {
    - nameID : String
    - type : String
    - availabilityYear : int
    - productionRate : int
    - suppliedCargo : List<Cargo>
    - demandedCargo : List<Cargo>
}

class IndustrySector {
    - name : String
    - importsExports : boolean
    - generatesCargo : boolean
    - consumesCargo : boolean
    - description : String
}

class Cargo {
    - name : String
    - amount : double
    - lifespan : int
    - type : String
    - productionResources : List<String>
}

class City {
    - nameID : String
    - trafficRate : int
    - suppliedCargo : List<Cargo>
    - demandedCargo : List<Cargo>
}

class Locomotive {
    - nameID : String
    - owner : String
    - type : String
    - power : double
    - acceleration : double
    - topSpeed : double
    - startYear : int
    - fuelCost : double
    - availabilityYear : int
    - acquisitionPrice : double
    - maintenancePrice : double
}

class MapRepository {
    + getAvailableMaps()
}

class CargoRepository {
    + getCargoList()
}

class EditorRepository {
    + getEditorByUsername(username)
    + addScenarioToEditor(editor, scenario)
}

class LocomotiveRepository {
    + getLocomotiveTypes()
    + getAvailableLocomotives(selectedLocomotiveTypes,\n    endDate)
}

class Repositories {
    - Repositories()
    + {static} getInstance()
    + getMapRepository()
    + getEditorRepository()
    + getLocomotiveRepository()
    + getCargoRepository()
}

class CreateScenarioController {
    + CreateScenarioController()
    + getAvailableMaps()
    + getMapIndustries(selectedMap)
    + getMapCities(selectedMap)
    + getLocomotiveTypes()
    + createScenario(nameID, selectedMap, startDate, endDate,\n    selectedIndustries, portImports, portExports,\n    portProduces, genIndustryFactors,\n    selectedLocomotiveTypes, mapCityList, cityTrafficRates)
    - getEditorFromSession()
}

class CreateScenarioUI {
}

CreateScenarioUI .> CreateScenarioController

CreateScenarioController ..> ApplicationSession
CreateScenarioController ..> UserSession
CreateScenarioController ..> Map
CreateScenarioController ..> MapRepository
CreateScenarioController ..> EditorRepository
CreateScenarioController ..> LocomotiveRepository
CreateScenarioController .> Repositories

Repositories -> "1" Repositories : instance
Repositories --> "1" MapRepository : mapRepository
Repositories --> "1" EditorRepository : editorRepository
Repositories --> "1" LocomotiveRepository : locomotiveRepository
Repositories --> "1" CargoRepository : cargoRepository

ApplicationSession -> "1" ApplicationSession : instance
ApplicationSession ..> UserSession

MapRepository --> "*" Map : maps

Map --> "*" Industry : industries
Map --> "*" City : cities
Map --> "*" Scenario : scenarios

Editor "1" -- "*" Map : creates >
Editor "1" -- "*" Scenario : creates >

Industry "*" -- "*" Cargo : produces/consumes >
Industry "*" -- "1" IndustrySector : belongs to >

Scenario "*" -- "1" Map : uses >
Scenario "1" -- "*" Industry : configures >
Scenario "1" -- "*" Locomotive : configures >
Scenario "1" -- "*" City : configures >

City "*" -- "*" Cargo : produces/consumes >

EditorRepository --> "*" Editor : editors
LocomotiveRepository --> "*" Locomotive : locomotives

@enduml
